adding initial modal script and related css and template files.

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-include "templates/header.html"
+include "templates/partials/_header.html"
 
 
-include "templates/footer.html"
+include "templates/partials/_footer.html"
