finished jquery animation version of modal view, left TODOs in code to add CSS transition feature detection.

--- a/src/modal.html
+++ b/src/modal.html
@@ -1,6 +1,6 @@
 include "templates/partials/_header.html"
 
-<a href="#" class="btn" data-modal-target="myModal">Modal Trigger</a>
+<a href="#" class="js-modal-trigger" data-modal-target="myModal">Modal Trigger</a>
 
 include "templates/partials/_modal.html"
 include "templates/partials/_footer.html"
