added documentation and additional TODO's for feature definition

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,9 @@
 include "templates/partials/_header.html"
 
+<ul>
+    <li>
+        <a href="modal.html">Modal</a>
+    </li>
+</ul>
 
 include "templates/partials/_footer.html"
