--- a/src/modal.html
+++ b/src/modal.html
@@ -1,6 +1,6 @@
 include "templates/partials/_header.html"
 
-<a href="#" class="js-modal-trigger" data-modal-target="myModal">Modal Trigger</a>
+<a href="#myModal" class="js-modal-trigger" data-modal-target="myModal">Modal Trigger</a>
 
 include "templates/partials/_modal.html"
 include "templates/partials/_footer.html"
